--- a/Sprint3/Site/web-data-viz/public/PAGES/ajuda.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/ajuda.html
@@ -60,7 +60,7 @@
       <h1>Nossos serviços de apoio ao usuário</h1>
           <div class="box_helps"> 
             <div class="help_cli">
-                <a href="https://www.canva.com/design/DAGGX5wBcJw/CcKcabrdOC4vrVrJcHb4fg/edit?utm_content=DAGGX5wBcJw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+                <a href="../instalacao.pdf" download="instalacao" >
                     <div class="box_manual" >
                         <h6>Manual de instalação</h6>
                     </div>
