mudanças no css

--- a/Sprint3/Site/web-data-viz/public/PAGES/dashboard.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/dashboard.html
@@ -31,7 +31,7 @@
         <li>|</li>
         <li><a href="heatmap/heatmap.html">Heatmap</a></li>
         <li>|</li>
-        <li><a href="../ajuda.html">Ajuda</a></li>
+        <li><a href="ajuda.html">Ajuda</a></li>
       </ul>
     </div>
   </div>
@@ -63,7 +63,7 @@
           <option value="mes">Últimos 30 dias</option>
         </select>
         
-        <h1 style="color: #1D314D;">3 ESTAÇÕES COM MAIOR FLUXO</h1>
+        <h1 style="color: #1D314D; margin-top: 10px;">3 ESTAÇÕES COM MAIOR FLUXO</h1>
 
       <!------------------------- Dados da Dashboard -------------------------------------->
       <div class="container">
