--- a/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
@@ -11,26 +11,28 @@
 </head>
 
 <body onload="plotar()">
-  <div class="header1">
-    <div class="container1">
-      
-      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()" style="background-color: white;">menu</span>
-        <h1 href="dashboard.html" class="titulo1">FLOWTECH</h1>
-    
-      <ul class="navbar1">
-          <li><a href="../index.html">Início</a></li>
-          <li>|</li>
-          <li><a href="perfil.html">Perfil</a></li>
-          <li>|</li>
-          <li><a href="simulador.html">Simulador Financeiro</a></li>
-          <li>|</li>
-          <li><a href="dashboard.html">Dashboard</a></li>
-          <li>|</li>
-          <li><a><u>Gráficos</u></a></li>
-          <li>|</li>
-          <li> <a href="heatmap/heatmap.html">Heatmap</a></li>
-          <li>|</li>
-          <li><a href="../ajuda.html">Ajuda</a></li>
+  <div class="header">
+    <div id="NavDashboard" class="container">
+
+      <div class="menu">
+        <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">MENU</span>
+        <h1 class="titulo">FLOWTECH</h1>
+      </div>
+
+      <ul class="navbar">
+        <li><a href="../index.html">Início</a></li>
+        <li>|</li>
+        <li> <a href="perfil.html">Perfil</a></li>
+        <li>|</li>
+        <li><a href="simulador.html">Simulador Financeiro</a></li>
+        <li>|</li>
+        <li><a href="dashboard.html">Dashboard</a></li>
+        <li>|</li>
+        <li><u>Gráficos</u></li>
+        <li>|</li>
+        <li><a href="heatmap/heatmap.html">Heatmap</a></li>
+        <li>|</li>
+        <li><a href="ajuda.html">Ajuda</a></li>
       </ul>
     </div>
   </div>
