--- a/Sprint3/Site/web-data-viz/public/PAGES/privacidade.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/privacidade.html
@@ -22,13 +22,11 @@
                 <li> <a href="../index.html#contato">Contato</a></li>
                 <li>|</li>
                 <li> <a href="simulador.html">Simulador Financeiro</a></li>
-                <a href="cadastro.html">
-                    <li class="bt"> CADASTRAR-SE</li>
-                </a>
-                <a href="login.html">
-                    <li class="bt"> LOGIN</li>
-                </a>
-            </ul>
+                </ul>
+                <div class="buttons-cadastro">
+                  <button><a href="../PAGES/cadastro.html">CADASTRAR-SE</button></a>
+                  <button><a href="../PAGES/login.html">LOGIN</button></a>
+                </div>
         </div>
     </div>
 
