--- a/Sprint3/Site/web-data-viz/public/PAGES/ajuda.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/ajuda.html
@@ -65,7 +65,7 @@
                         <h6>Manual de instalação</h6>
                     </div>
                 </a>
-                <a href="https://flowtechsolutions.atlassian.net/servicedesk/customer/portal/1">
+                <a href="https://flowtechsolutions.atlassian.net/servicedesk/customer/portal/1" target="_blank">
                     <div class="box_HD">
                         <h6>Help Desk</h6>
                     </div>
